--- a/apricot/package.json
+++ b/apricot/package.json
@@ -65,6 +65,7 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "tiptap-extension-resize-image": "^1.2.1",
     "vaul": "^1.1.2",
     "zod": "^3.24.1"
   },
